[workspace]
members = [
	"psp34_market", # contract PSP34
	# "other_contract",
	"logic_traits", # main implementation of all contracts
]
resolver = "2"

[workspace.package]
authors = ["[your_name] <[your_email]>"]
edition = "2021"
repository = "https://github.com/dang1412/ink-samples/multiple_contracts_project/"